<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:background="@color/black"
android:orientation="vertical"
android:padding="16dp">

<!-- CardView for Steps & Calories -->
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:elevation="4dp">
</androidx.cardview.widget.CardView>


<!-- Open Bottom Sheet -->
<ImageView
    android:layout_width="384dp"
    android:layout_height="435dp"
    android:contentDescription="@string/logo_app"
    android:src="@drawable/intro_pic" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:gravity="center"
    android:text="@string/push_your_self_to_the_limit"
    android:textColor="@color/white"
    android:textSize="20sp" />

<Button
    android:id="@+id/open_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/let_s_go" />
</LinearLayout>
